--- a/SNMP.ipynb
+++ b/SNMP.ipynb
@@ -751,7 +751,7 @@
     "rocommunity public\n",
     "rwcommunity private\n",
     "\n",
-    "pass_persist .1.3.6.1.2.1.16.1 /usr/bin/python3 /tmp/probe.py\n",
+    "pass_persist .1.3.6.1.2.1.16 /usr/bin/python3 /tmp/probe.py eth0\n",
     "EOF\n",
     "\n",
     "# Restart agent - Linux\n",
