--- a/SNMP.ipynb
+++ b/SNMP.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,13 +841,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SNMPv2-SMI::mib-2.16.1.1.1.1.1 = INTEGER: 1\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "\n",
-    "snmpge  t -v2c -c public localhost .1.3.6.1.2.1.16.1.1.1.1.1"
+    "snmpget -v2c -c public localhost .1.3.6.1.2.1.16.1.1.1.1.1"
    ]
   }
  ],
