instalação snmp adicionado no notebook

--- a/exemplo.ipynb
+++ b/exemplo.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Install snmpd tools, agent and mibs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# Install SNMP - Linux\n",
+    "sudo apt update\n",
+    "sudo apt install -y snmp snmpd snmp-mibs-downloader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# STATISTICS"
