adicionando instalção da biblioteca scapy

--- a/exemplo.ipynb
+++ b/exemplo.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "# Install SNMP - Linux\n",
     "sudo apt update\n",
-    "sudo apt install -y snmp snmpd snmp-mibs-downloader"
+    "sudo apt install -y snmp snmpd snmp-mibs-downloader\n",
+    "sudo pip install scapy"
    ]
   },
   {
